--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ website:
   title: "Applying Tidy Finance with Python to Vietnam"
   description: "An approach to empirical finance in Vietnam with Python"
   google-analytics: "G-GNCL5RNXDR"
+  favicon: favicon.ico
   navbar:
     background: "#1a1a2e"
     foreground: "#e8e8e8"
@@ -17,12 +18,12 @@ website:
       # - href: about.qmd
       #   text: About
       - text: "📘 English Book"
-        href: https://mikenguyen13.github.io/tidy_finance_vn/
+        href: https://mikenguyen13.github.io/tidy_finance_vn/ 
       - text: "📗 Sách Tiếng Việt"
-        href: https://YOUR-ORG.github.io/tidy-finance-vietnam-python-vi/
+        href: https://mikenguyen13.github.io/tidy_finance_vn_vi/
     # right:
     #   - icon: github
-    #     href: https://github.com/YOUR-ORG/tidy-finance-vietnam-website
+    #     href: https://mikenguyen13.github.io/tidy_finance_vn_web/
   # page-footer:
   #   center: "© 2025 Tidy Finance Vietnam | Built with [Quarto](https://quarto.org)"
   search: true
